plugins {
    id 'com.android.application'
    id 'com.google.gms.google-services'
}

android {
    compileSdkVersion 32

    defaultConfig {
        applicationId "com.example.attendanceacademia"
        minSdkVersion 25
        //noinspection ExpiredTargetSdkVersion
        targetSdkVersion 32
        versionCode 1
        versionName "1.0"
        multiDexEnabled true
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

//    tasks.withType(JavaCompile) {
//        options.compilerArgs << '--add-opens' << 'java.base/java.io=ALL-UNNAMED'
//    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    sourceSets {
        main {
            res {
                srcDirs 'src\\main\\res', 'src\\main\\res\\2'
            }
        }
    }
    namespace 'com.example.attendanceacademia'
}

dependencies {

    implementation 'androidx.appcompat:appcompat:1.2.0'
    implementation 'com.google.android.material:material:1.5.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
    implementation 'com.google.firebase:firebase-messaging:21.1.0'
    implementation 'com.google.firebase:firebase-auth:20.0.4'
    implementation 'com.google.firebase:firebase-database:19.7.0'


    testImplementation 'junit:junit:4.+'
    androidTestImplementation 'androidx.test.ext:junit:1.1.2'

    implementation 'com.github.bumptech.glide:glide:4.11.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
    implementation 'com.android.volley:volley:1.2.1'
    implementation 'com.google.code.gson:gson:2.8.9'
    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
    implementation "androidx.recyclerview:recyclerview:1.1.0"
    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
    implementation "androidx.cardview:cardview:1.0.0"
    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
    implementation 'com.karumi:dexter:6.2.3'
    implementation 'de.hdodenhof:circleimageview:3.1.0'
    implementation 'io.github.muddz:styleabletoast:2.4.0'

}
apply plugin: 'com.google.gms.google-services'